--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,13 +44,16 @@ dependencies:
   flutter_svg: ^2.0.7
   firebase_core: ^2.15.1
   intl: ^0.18.1
-  cached_network_image: ^3.2.3
+  cached_network_image: ^3.4.1
   video_player: ^2.7.1
   flutter_native_splash: ^2.3.2
   http: ^1.1.0
   firebase_messaging: ^14.6.8
   flutter_local_notifications: ^15.1.1
   extended_image: ^8.1.1
+  flutter_blurhash: ^0.9.0
+
+
 
 dev_dependencies:
   flutter_test:
